<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dlgdev.goivcalc.ui.CalculatorActivity">

    <Spinner
        android:id="@+id/dust_view"
        android:layout_width="91dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:entries="@array/dust"
        app:layout_constraintStart_toEndOf="@+id/name_view"
        app:layout_constraintTop_toTopOf="@+id/name_view"/>

    <AutoCompleteTextView
        android:id="@+id/name_view"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/mon_name_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <CheckBox
        android:id="@+id/hp_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:text="@string/hp_check_box"
        app:layout_constraintTop_toBottomOf="@+id/cp_view"
        app:layout_constraintStart_toStartOf="@+id/name_view"
        />

    <CheckBox
        android:id="@+id/att_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/att_check_box"
        app:layout_constraintStart_toEndOf="@+id/hp_check_box"
        app:layout_constraintTop_toTopOf="@+id/hp_check_box"/>

    <CheckBox
        android:id="@+id/def_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/def_check_box"
        app:layout_constraintStart_toEndOf="@+id/att_check_box"
        app:layout_constraintTop_toTopOf="@+id/hp_check_box"
        android:layout_marginStart="16dp"/>

    <Spinner
        android:id="@+id/IV_leader_saying"
        android:layout_width="136dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:entries="@array/iv_leader_sayings"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/def_check_box"
        app:layout_constraintTop_toTopOf="@+id/def_check_box"
        />

    <TextView
        android:id="@+id/results_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_label"
        android:labelFor="@+id/results_view"
        app:layout_constraintStart_toStartOf="@+id/name_view"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/hp_check_box"
        android:layout_marginStart="8dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/results_view"
        android:layout_width="347dp"
        android:layout_height="171dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/results_label"
        app:layout_constraintStart_toStartOf="@+id/name_view"
        tools:layout_editor_absoluteY="178dp"
        android:layout_marginEnd="8dp"/>

    <EditText
        android:id="@+id/cp_view"
        android:layout_width="78dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="CP"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/name_view"
        app:layout_constraintStart_toStartOf="@+id/name_view"
        />

    <EditText
        android:id="@+id/hp_view"
        android:layout_width="79dp"
        android:layout_height="41dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="HP"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/cp_view"
        app:layout_constraintTop_toTopOf="@+id/cp_view"
        tools:layout_editor_absoluteY="65dp"/>

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="131dp"
        android:layout_height="37dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="5dp"
        android:text="Used power up"
        app:layout_constraintStart_toEndOf="@+id/hp_view"
        app:layout_constraintTop_toTopOf="@+id/hp_view"/>

</android.support.constraint.ConstraintLayout>
